# grafeo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG-grafeo.md  CHANGELOG-obrain.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  README.md  _typos.toml  benchmark_results.json  benchmark_tp3.sh  benchmark_tp3_manual.md  build.rs  codecov.yml  deny.toml  dump_persona.rs  mkdocs.yml
bench/substrate/: Cargo.toml  README.md  build.rs  retrieval_gate.json  t16_validation.json
bench/substrate/benches/: activation.rs  crud.rs  ldleiden.rs  retrieval.rs
bench/substrate/src/: bench_baseline.rs  bench_substrate.rs  lib.rs
crates/bindings/c/: Cargo.toml  README.md  build.rs  grafeo.h  obrain.h
crates/bindings/common/: Cargo.toml
crates/bindings/node/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
crates/bindings/python/: Cargo.toml  README.md  pyproject.toml
crates/bindings/wasm/: Cargo.toml  README.md  obrain_wasm.d.ts  obrain_wasm.js  package-lite.json  package.json
crates/grafeo/: Cargo.toml  README.md
crates/grafeo-cognitive/: Cargo.toml
crates/grafeo-cognitive/benches/: hopfield_bench.rs
crates/grafeo-cognitive/src/: activation.rs  co_change.rs  config.rs  consolidation.rs  distillation.rs  energy.rs  engine.rs  epigenetic.rs  episodic.rs  error.rs  fabric.rs  fingerprint.rs  gds_refresh.rs  immune.rs  lib.rs  memory.rs  procedures.rs  scar.rs  search.rs  stagnation.rs  stigmergy.rs  store_trait.rs  synapse.rs  tenant.rs
crates/grafeo-cognitive/tests/: activation_extra_test.rs  activation_test.rs  bounds_lru_test.rs  co_change_extra_test.rs  co_change_test.rs  config_extra_test.rs  consolidation_test.rs  coverage_boost_test.rs  distillation_extra_test.rs  distillation_test.rs  energy_extra_test.rs  energy_test.rs  engine_extra_test.rs  engine_test.rs  episodic_extra_test.rs  episodic_test.rs  fabric_coverage_test.rs  fabric_extra_test.rs  fabric_test.rs  fingerprint_test.rs  gds_refresh_test.rs  integration_test.rs  memory_coverage_test.rs  memory_extra_test.rs  memory_test.rs  provenance_test.rs  scar_test.rs  scoring_proptest.rs  stagnation_extra_test.rs  stagnation_test.rs  synapse_test.rs  tenant_test.rs  write_through_test.rs
crates/grafeo-engine/: Cargo.toml
crates/grafeo-engine/benches/: query_bench.rs
crates/grafeo-engine/src/: cognitive_procedures.rs  cognitive_udfs.rs  database.rs  lib.rs  procedures.rs  session.rs
crates/grafeo-engine/tests/: call_procedures.rs  cognitive_engram_procedures_test.rs  cognitive_query_test.rs  concurrent_sessions.rs  crash_injection_single_file.rs  create_relationship_phantom_nodes.rs  database_api.rs  edge_annotation_persistence.rs  error_paths.rs  expression_and_projection.rs  factorized_aggregation_test.rs  filter_pushdown.rs  gds_integration_e2e.rs  grafeo_file.rs  lpg_graph_isolation.rs  mmr_search.rs  mutation_planning.rs  mvcc_integration.rs  named_graphs.rs  null_and_coercion.rs  query_correctness.rs  seam_dml_interactions.rs  seam_session_state.rs  search_operations.rs  set_label_binding.rs  snapshot.rs  spec_compliance.rs  sql_pgq.rs  start_end_node.rs  temporal_types.rs  time_travel.rs  timestamp_function.rs  vector_filtered.rs  vector_incremental.rs  wal_directory.rs  wal_recovery.rs
crates/grafeo-reactive/: Cargo.toml
crates/grafeo-reactive/benches/: bus_bench.rs
crates/grafeo-reactive/src/: bus.rs  error.rs  event.rs  lib.rs  listener.rs  scheduler.rs  store.rs  tests.rs
crates/grafeo-reactive/tests/: bus_extra_test.rs  event_test.rs  mutation_bus_test.rs  scheduler_extra_test.rs  scheduler_test.rs  store_test.rs
crates/grafeo/src/: lib.rs
crates/kv-registry/: Cargo.toml
crates/kv-registry/src/: banks.rs  context.rs  conv.rs  hilbert.rs  hilbert_bank.rs  lib.rs  registry.rs  tier_quant.rs  tokenizer.rs
crates/kv-registry/tests/: phase_d_integration.rs
crates/neo4j2obrain/: Cargo.toml
crates/neo4j2obrain/src/: bolt_reader.rs  cognitive_init.rs  embedder.rs  main.rs  pipeline.rs  sentence_transformer.rs
crates/obrain/: Cargo.toml  README.md
crates/obrain-cli/: Cargo.toml
crates/obrain-cli/src/: main.rs  repl.rs
crates/obrain-cli/tests/: commands.rs
crates/obrain-cognitive/: Cargo.toml
crates/obrain-cognitive/benches/: cognitive_bench.rs  hopfield_bench.rs
crates/obrain-cognitive/src/: activation.rs  affinity.rs  co_change.rs  config.rs  consolidation.rs  context_loader.rs  cristallization.rs  distillation.rs  energy.rs  engine.rs  epigenetic.rs  episodic.rs  error.rs  fabric.rs  gds_refresh.rs  immune.rs  intent.rs  kernel.rs  kernel_adaptation.rs  kernel_bootstrap.rs  kernel_params.rs  lib.rs  memory.rs  neural_routing.rs  persona.rs  procedures.rs  protocol_native.rs  provenance.rs  reasoning.rs  reflex.rs  scaffolding.rs  scar.rs  search.rs  session_metrics.rs  stagnation.rs  stigmergy.rs  store_trait.rs  synapse.rs  tenant.rs  trajectory.rs  (+2 more)
crates/obrain-cognitive/tests/: activation_extra_test.rs  activation_test.rs  bounds_lru_test.rs  co_change_extra_test.rs  co_change_test.rs  config_extra_test.rs  consolidation_test.rs  coverage_boost_test.rs  distillation_extra_test.rs  distillation_test.rs  energy_extra_test.rs  energy_test.rs  engine_extra_test.rs  engine_test.rs  engram_substrate_test.rs  episodic_extra_test.rs  episodic_test.rs  epoch_persistence_test.rs  error_test.rs  fabric_coverage_test.rs  fabric_extra_test.rs  fabric_test.rs  feedback_baseline.rs  feedback_scaling_bench.rs  fingerprint_test.rs  gds_refresh_test.rs  integration_test.rs  memory_test.rs  (+21 more)
crates/obrain-engine/: Cargo.toml
crates/obrain-iam/: Cargo.toml
crates/obrain-migrate/: Cargo.toml
crates/obrain-rag/: Cargo.toml
crates/obrain-reactive/: Cargo.toml
crates/obrain-substrate/: Cargo.toml
crates/persona/: Cargo.toml
crates/retrieval/: Cargo.toml
crates/server/: Cargo.toml
examples/rust/: Cargo.toml  README.md  algorithms.rs  basic.rs  bench_load.rs  iot_stream.rs  knowledge_base.rs  migrate_v2.rs  multi_language.rs  parameterized.rs  persistence.rs  social_network.rs  transactions.rs  vector_search.rs
(+1252 files in other folders)
