[package]
name = "obrain-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
obrain = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain", default-features = false, features = ["embedded", "storage"] }
obrain-engine = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-engine", default-features = false, features = ["wal", "gql"] }
obrain-core = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-core" }
obrain-common = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-common" }
obrain-cognitive = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-cognitive", default-features = false, features = ["engram", "hopfield", "energy", "synapse"] }
obrain-rag = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-rag" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
anyhow = "1"
chrono = "0.4"
ctrlc = "3"
rustyline = { version = "15", features = ["derive"] }

[features]
default = []
http = ["dep:reqwest"]

[build-dependencies]
bindgen = "0.71"
