[workspace]
members = ["crates/*"]

[package]
name = "obrain-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
think-filter = { path = "crates/think-filter" }
llm-engine = { path = "crates/llm-engine" }
graph-schema = { path = "crates/graph-schema" }
kv-registry = { path = "crates/kv-registry" }
persona = { path = "crates/persona" }
retrieval = { path = "crates/retrieval" }
obrain = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain", default-features = false, features = ["embedded", "storage"] }
obrain-engine = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-engine", default-features = false, features = ["wal", "gql"] }
obrain-core = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-core" }
obrain-common = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-common" }
obrain-cognitive = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-cognitive", default-features = false, features = ["engram", "hopfield", "energy", "synapse"] }
obrain-rag = { path = "/Users/triviere/projects/lab/grafeo/crates/obrain-rag" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
server = { path = "crates/server" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
ctrlc = "3"
rustyline = { version = "15", features = ["derive"] }

[features]
default = []
http = ["dep:reqwest"]
## Enable the self-embed proprioceptive channel (Phase 4 TP.2).
## Disabled by default — superseded by state_kq_b (Phase 5).
self_embed_proprio = []

