[workspace]
resolver = "2"
members = [
    "crates/obrain",
    "crates/obrain-common",
    "crates/obrain-core",
    "crates/obrain-adapters",
    "crates/obrain-engine",
    "crates/obrain-reactive",
    "crates/obrain-cognitive",
    "crates/obrain-rag",
    "crates/obrain-cli",
    "crates/bindings/python",
    "crates/bindings/node",
    "crates/bindings/c",
    "crates/bindings/wasm",
    "crates/bindings/common",
    "examples/rust",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.91.1"
license = "Apache-2.0"
repository = "https://github.com/this-rs/obrain"
authors = ["S.T. Grond"]
description = "A high-performance, embeddable graph database with support for LPG RDF and all major graph query languages."

[workspace.dependencies]
# Internal crates (default-features = false to allow per-crate control)
obrain-common = { path = "crates/obrain-common", version = "0.0.1" }
obrain-core = { path = "crates/obrain-core", version = "0.0.1", default-features = false }
obrain-adapters = { path = "crates/obrain-adapters", version = "0.0.1", default-features = false }
obrain-engine = { path = "crates/obrain-engine", version = "0.0.1", default-features = false }
obrain = { path = "crates/obrain", version = "0.0.1" }
obrain-reactive = { path = "crates/obrain-reactive", version = "0.0.1" }
obrain-cognitive = { path = "crates/obrain-cognitive", version = "0.0.1", default-features = false }
obrain-rag = { path = "crates/obrain-rag", version = "0.0.1", default-features = false }
obrain-bindings-common = { path = "crates/bindings/common", version = "0.0.1", default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency & synchronization
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1"

# Data structures
hashbrown = "0.16"
smallvec = "1"
bumpalo = "3"
indexmap = "2"
dashmap = "6"
arcstr = { version = "1", features = ["serde"] }

# Memory & I/O
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
bytes = "1"
byteorder = "1"
fs2 = "0.4"

# Checksums & hashing
crc32fast = "1"
foldhash = "0.2"
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }

# Python bindings
pyo3 = "0.27"
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync", "time", "macros"] }
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Regex
regex = "1"
regex-lite = "0.1"

# Unicode
unicode-normalization = "0.1"

# Testing
proptest = "1"
criterion = "0.8"
tempfile = "3"

# Allocators (platform-optimized)
tikv-jemallocator = "0.6"
mimalloc = "0.1"

# Vector index support
ordered-float = "5"
rand = "0.10"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns in database code
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Casting is common and intentional in low-level database code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Style preferences
uninlined_format_args = "allow"
doc_markdown = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
unreadable_literal = "allow"
struct_field_names = "allow"
wildcard_imports = "warn"
if_not_else = "allow"
match_same_arms = "allow"
single_match_else = "allow"
return_self_not_must_use = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
needless_continue = "allow"
derivable_impls = "allow"
missing_fields_in_debug = "allow"
# Low-level memory code patterns
mut_from_ref = "allow"
ptr_as_ptr = "allow"
manual_slice_size_calculation = "allow"
# Additional pedantic allows
needless_range_loop = "allow"
default_trait_access = "allow"
unnested_or_patterns = "allow"
used_underscore_binding = "allow"
doc_link_with_quotes = "allow"
float_cmp = "allow"
should_implement_trait = "allow"
ref_option = "allow"
unnecessary_map_or = "allow"
while_let_loop = "allow"
manual_div_ceil = "allow"
needless_raw_string_hashes = "allow"
single_match = "allow"
match_wildcard_for_single_variants = "allow"
map_entry = "allow"
large_enum_variant = "allow"
implicit_hasher = "allow"
unnecessary_literal_bound = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.bench]
lto = "thin"
codegen-units = 1

# Profiling: release performance with debug symbols for flamegraphs
[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

# Minimal size for WASM or embedded
[profile.minimal-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
