[package]
name = "grafeo-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Query engine and database management for Grafeo"

[dependencies]
grafeo-common.workspace = true
grafeo-core = { workspace = true, default-features = false }
grafeo-adapters = { workspace = true, default-features = false }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Data structures
smallvec.workspace = true
hashbrown.workspace = true
indexmap.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# Serialization
serde.workspace = true
bincode.workspace = true

# Regex for SPARQL FILTER
regex = "1"

# Tracing
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
serde_json = "1"
tokio.workspace = true

[features]
default = ["gql", "parallel", "wal", "spill", "mmap"]
gql = ["grafeo-adapters/gql"]
cypher = ["grafeo-adapters/cypher"]
sparql = ["grafeo-adapters/sparql"]
gremlin = ["grafeo-adapters/gremlin"]
graphql = ["grafeo-adapters/graphql"]
sql-pgq = ["grafeo-adapters/sql-pgq"]  # SQL/PGQ (SQL:2023 GRAPH_TABLE)
rdf = ["grafeo-core/rdf", "grafeo-adapters/rdf"]  # RDF graph model and planner
parallel = ["rayon", "crossbeam", "grafeo-core/parallel", "grafeo-adapters/parallel"]  # Parallel execution
wal = ["grafeo-adapters/wal"]  # Write-ahead log storage
spill = ["grafeo-core/spill"]  # Disk spilling for out-of-core execution
mmap = ["grafeo-core/mmap"]  # File-backed vector storage
full = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq", "rdf", "parallel", "wal", "spill", "mmap"]
vector-index = ["grafeo-core/vector-index"]  # HNSW vector index for k-NN search
block-stm = []  # Block-STM parallel transaction execution

[lints]
workspace = true

[[bench]]
name = "query_bench"
harness = false
