[package]
name = "grafeo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance, embeddable graph database with a Rust core and no required C dependencies"
keywords = ["graph", "database", "gql", "knowledge-graph", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
grafeo-engine.workspace = true
grafeo-core.workspace = true
grafeo-common.workspace = true
grafeo-adapters.workspace = true

# Platform-optimized allocators (optional)
[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_env = "musl"), any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { workspace = true, optional = true }

[features]
default = ["full"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
full = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]

# Platform capabilities (enabled by default via grafeo-engine defaults)
parallel = ["grafeo-engine/parallel"]
wal = ["grafeo-engine/wal"]
spill = ["grafeo-engine/spill"]
mmap = ["grafeo-engine/mmap"]

# Enable platform-optimized memory allocator (10-20% faster allocations)
jemalloc = ["tikv-jemallocator"]
mimalloc-allocator = ["mimalloc"]

[lints]
workspace = true
