[package]
name = "obrain-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Query engine and database management for Obrain"

[dependencies]
obrain-common.workspace = true
obrain-core = { workspace = true, default-features = false }
obrain-adapters = { workspace = true, default-features = false }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Data structures
arcstr.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
indexmap.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# Serialization
serde.workspace = true
bincode.workspace = true

# Regex for SPARQL FILTER (use regex-lite for smaller WASM builds)
regex = { workspace = true, optional = true }
regex-lite = { workspace = true, optional = true }

# Cryptographic hashes for SPARQL hash functions (optional, RDF only)
md5 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# Tracing
tracing.workspace = true

# Cognitive subsystems (optional)
obrain-reactive = { workspace = true, optional = true }
obrain-cognitive = { workspace = true, optional = true, default-features = false }

# Embedding (optional, for ONNX embedding generation)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
serde_json = "1"
tokio.workspace = true

[features]
default = ["gql", "parallel", "wal", "spill", "mmap", "regex"]
regex = ["dep:regex", "obrain-core/regex"]
regex-lite = ["dep:regex-lite", "obrain-core/regex-lite"]
gql = ["obrain-adapters/gql"]
cypher = ["obrain-adapters/cypher"]
sparql = ["obrain-adapters/sparql"]
gremlin = ["obrain-adapters/gremlin"]
graphql = ["obrain-adapters/graphql"]
sql-pgq = ["obrain-adapters/sql-pgq"]  # SQL/PGQ (SQL:2023 GRAPH_TABLE)
rdf = ["obrain-core/rdf", "obrain-adapters/rdf", "md5", "sha1", "sha2"]  # RDF graph model and planner
parallel = ["rayon", "crossbeam", "obrain-core/parallel", "obrain-adapters/parallel"]  # Parallel execution
algos = ["obrain-adapters/algos"]  # Graph algorithm plugin (SSSP, PageRank, etc.)
wal = ["obrain-adapters/wal"]  # Write-ahead log storage
obrain-file = ["obrain-adapters/obrain-file"]  # Single-file .obrain format
spill = ["obrain-core/spill"]  # Disk spilling for out-of-core execution
mmap = ["obrain-core/mmap"]  # File-backed vector storage
temporal = ["obrain-core/temporal"]  # Append-only versioned properties
tiered-storage = ["obrain-core/tiered-storage"]  # Hot/cold tiered storage with mmap epoch files
# Convenience groups
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]  # All query language parsers
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]  # All AI/RAG features
storage = ["wal", "obrain-file", "spill", "mmap"]  # Persistent storage (WAL, single-file, disk spill, mmap)

# Named profiles (ecosystem-aligned)
embedded = ["gql", "ai", "algos", "parallel", "regex", "jsonl-import"]  # Python libs, MCP, in-process
browser = ["gql", "regex-lite"]  # WASM / obrain-web
server = ["full", "metrics"]  # obrain-server
full = ["languages", "ai", "rdf", "parallel", "algos", "storage", "jsonl-import", "parquet-import"]

# Data import
jsonl-import = ["obrain-core/jsonl-import"]  # JSON Lines file import
parquet-import = ["obrain-core/parquet-import"]  # Apache Parquet file import

# Search & AI features
vector-index = ["obrain-core/vector-index"]  # HNSW vector index for k-NN search
text-index = ["obrain-core/text-index"]  # BM25 inverted index for full-text search
hybrid-search = ["obrain-core/hybrid-search", "text-index", "vector-index"]  # Combined text + vector search
cdc = []  # Change data capture with history API
reactive = []  # Reactive mutation event bus (post-commit hook for obrain-reactive)
cognitive = ["reactive", "dep:obrain-reactive", "dep:obrain-cognitive", "obrain-cognitive/cognitive"]  # Cognitive engine (energy + synapses)
cognitive-fabric = ["cognitive", "obrain-cognitive/cognitive-fabric"]  # + fabric, co-change, GDS
cognitive-full = ["cognitive", "obrain-cognitive/cognitive-full"]  # All cognitive subsystems
cognitive-engram = ["cognitive", "obrain-cognitive/engram"]  # Engram subsystem (Layer 0: Hebbian + FSRS)
metrics = []  # Lock-free query, transaction, and session metrics
embed = ["ort", "tokenizers", "hf-hub"]  # ONNX embedding generation (opt-in, adds ~17MB)

# Testing utilities (zero overhead when disabled)
testing-crash-injection = ["obrain-core/testing-crash-injection"]  # Crash injection for recovery testing

[lints]
workspace = true

[[bench]]
name = "query_bench"
harness = false
