[package]
name = "obrain-iam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Identity and Access Management for Obrain — ORN system, policy evaluation, tenant-scoped sessions"

[features]
default = []

[dependencies]
# Internal crates
obrain-common.workspace = true
obrain-core = { workspace = true, default-features = false }

# Password hashing
bcrypt.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Data structures
smallvec.workspace = true

[dev-dependencies]
proptest.workspace = true
obrain-substrate.workspace = true

[lints]
workspace = true
