[package]
name = "obrain-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "One-shot migration tool: legacy .obrain (LpgStore) → substrate format"

[[bin]]
name = "obrain-migrate"
path = "src/main.rs"

[features]
default = ["legacy-read"]
# When enabled, the binary can read pre-substrate .obrain stores via the
# in-tree LpgStore implementation (obrain-core). This feature is expected
# to be dropped together with LpgStore itself at T17 cut-over — at that
# point the binary retires.
legacy-read = []
# T17 final cutover (2026-04-23): `single-file-read` feature removed.
# The single-file `.obrain` v1/v2 formats are no longer readable — any
# user with a pre-substrate single-file database must use an older
# release (≤ v0.0.1) of obrain-migrate to convert. The directory-based
# LpgStore path (via `legacy-read`) is retained for archival
# migrations but will be retired together with the lpg module itself.

[dependencies]
obrain-core = { workspace = true, features = ["tiered-storage"] }
obrain-common = { workspace = true }
obrain-substrate = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
